syntax = "proto3";
option java_package = "cal";
service Multiplication{
  rpc GetMultiplicationTable (MultiplicationRequest) returns (stream MultiplicationResponse);
}
message MultiplicationRequest {
  int32 nombre = 1;
  int32 limite = 2;
}
message MultiplicationResponse {
  string resultat = 1;
}